--- a/ProjektProgramowanie_logowanie/App.config
+++ b/ProjektProgramowanie_logowanie/App.config
@@ -1,13 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="ProjektProgramowanie_logowanie.Properties.Settings.StoMaToLogiczneConnectionString"
-            connectionString="Data Source=onlinegradebook.database.windows.net;Initial Catalog=StoMaToLogiczne;User ID=theedziu;Password=Kacper123"
-            providerName="System.Data.SqlClient" />
+        <add name="ProjektProgramowanie_logowanie.Properties.Settings.StoMaToLogiczneConnectionString" connectionString="Data Source=onlinegradebook.database.windows.net;Initial Catalog=StoMaToLogiczne;User ID=theedziu;Password=Kacper123" providerName="System.Data.SqlClient"/>
     </connectionStrings>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
 </configuration>
