--- a/ProjektProgramowanie2Dentysta/ProjektProgramowanie2Dentysta.csproj
+++ b/ProjektProgramowanie2Dentysta/ProjektProgramowanie2Dentysta.csproj
@@ -54,6 +54,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StoMaToLogiczneDataSet.cs">
+      <DependentUpon>StoMaToLogiczneDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="StoMaToLogiczneDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
