--- a/ProjektProgramowanie_MainPage/ProjektProgramowanie_MainPage.csproj
+++ b/ProjektProgramowanie_MainPage/ProjektProgramowanie_MainPage.csproj
@@ -54,6 +54,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Umowione_wizyty.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Umowione_wizyty.Designer.cs">
+      <DependentUpon>Umowione_wizyty.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -66,6 +72,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Umowione_wizyty.resx">
+      <DependentUpon>Umowione_wizyty.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
